--- a/publiccode.yml
+++ b/publiccode.yml
@@ -29,12 +29,8 @@ description:
   it:
     features:
       - Inserimento delle richieste di contributi del canone di locazione
-      - >-
-        Inserimento delle domande presentate dai cittadini residenti sottoposti
-        a sfratto
-      - >-
-        nserimento delle domande per ottenere contributi finalizzati a favorire
-        la mobilità abitativa
+      - Inserimento delle domande presentate dai cittadini residenti sottoposti a sfratto
+      - Inserimento delle domande per ottenere contributi finalizzati a favorire la mobilità abitativa
       - Inserimento delle proposte d’intervento
     genericName: Epico
     longDescription: >
