--- a/publiccode.yml
+++ b/publiccode.yml
@@ -2,7 +2,7 @@
 # metadata file that makes public software easily discoverable.
 # More info at https://github.com/italia/publiccode.yml
 
-publiccodeYmlVersion: '0.2'
+publiccodeYmlVersion: '0.3'
 categories:
   - data-collection
   - data-visualization
@@ -32,7 +32,7 @@ description:
       - Inserimento delle domande presentate dai cittadini residenti sottoposti a sfratto
       - Inserimento delle domande per ottenere contributi finalizzati a favorire la mobilità abitativa
       - Inserimento delle proposte d’intervento
-    genericName: Epico
+   # genericName: Epico
     longDescription: >
       Modulo per la richiesta di contributi finalizzati a favorire la mobilità
       abitativa dei cittadini residenti nei Comuni ad alta tensione abitativa e
